--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% block head_css %}
+            <!-- Copy CSS from https://getbootstrap.com/docs/4.4/getting-started/introduction/#css -->
+        {% endblock %}
+        {% block head_js %}
+            <!-- Copy JavaScript from https://getbootstrap.com/docs/4.4/getting-started/introduction/#js -->
+        {% endblock %}
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
