--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -4,20 +4,36 @@
 
 {% block body %}
     <h1>Movie index</h1>
-
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Movieid</th>
+                <th>Movie Title </th>
+                <th> Actions <th>
             </tr>
         </thead>
         <tbody>
         {% for movie in movies.hits.hits %}
             <tr>
-                <td>ID</td>
                 <td>{{ movie._source.movieid }}</td>
-                
+                <td>
+                    <div class= "row justify-content-center">
+                        {{movie._source.title}}
+                    </div>
+                </td>
+                <td>
+                    <div class="row justify-content-center">
+                        <div class="md-5">
+                            <button type="button" onclick="location.href='{{ path('movie_show', {'movieid' : movie._source.movieid}) }}'" class="btn btn-primary btn-lg" style="color:#3B4CCA; ">Detail</button>
+                        </div>
+                        <div class="md-2">
+
+                        </div>
+                        <div class="md-5">
+                            <button type="button" onclick="location.href='{{ path('movie_index')}}'" class="btn btn-primary btn-lg" style="color:#3B4CCA;" >Editer</button>
+                        </div>
+                    </div>
+                </td>
             </tr>
         {% else %}
             <tr>
@@ -26,6 +42,5 @@
         {% endfor %}
         </tbody>
     </table>
-
     <a href="{{ path('movie_new') }}">Create new</a>
 {% endblock %}
