--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -8,19 +8,17 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ movie.id }}</td>
-            </tr>
-            <tr>
                 <th>Movieid</th>
                 <td>{{ movie.movieid }}</td>
+            </tr>
+            <tr>
+                <th>Movie Title</th>
+                <td>{{ movie.title }}</td>
             </tr>
         </tbody>
     </table>
 
     <a href="{{ path('movie_index') }}">back to list</a>
 
-    <a href="{{ path('movie_edit', {'id': movie.id}) }}">edit</a>
 
-    {{ include('movie/_delete_form.html.twig') }}
 {% endblock %}
