--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,8 +18,54 @@
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+
     </head>
-    <body>
+            <body>
+                <div style="text-align: center;">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand centre" href="{{ path('homepage') }}">FilmPrivé</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="justify-content-center">
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                            </li>
+                            
+
+                            {% if not app.user %}
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('user_new') }}">S'enregistrer</a>
+                                </li>
+
+                            {% elseif app.user %}
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('movie_search') }}">Rechercher</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('movie_index') }}">Catalogue</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('afficher_panier') }}">Panier</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+                                </li>
+
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
         {% block body %}{% endblock %}
     </body>
 </html>
