--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -8,33 +8,28 @@
     <table class="table">
         <tbody>
             <tr>
-<<<<<<< HEAD
-                <th>Id</th>
-                <td>{{ movie.id }}</td>
-            </tr>
-            <tr>
-                <th>Movieid</th>
-                <td>{{ movie.movieid }}</td>
-            </tr>
-=======
                 <th>Movieid</th>
                 <td>{{ movie.movieid }}</td>
             </tr>
             <tr>
-                <th>Movie Title</th>
+                <th>Title</th>
                 <td>{{ movie.title }}</td>
             </tr>
->>>>>>> master
+            <tr>
+                <th>Price</th>
+                <td>{{ movie.price }}</td>
+            </tr>
+            <tr>
+                <th>Genre</th>
+                <td>{{ movie.genre }}</td>
+            </tr>
+            <tr>
+                <th>Ranking</th>
+                <td>{{ movie.rotten_tomatoes }}</td>
+            </tr>
         </tbody>
     </table>
 
     <a href="{{ path('movie_index') }}">back to list</a>
 
-<<<<<<< HEAD
-    <a href="{{ path('movie_edit', {'id': movie.id}) }}">edit</a>
-
-    {{ include('movie/_delete_form.html.twig') }}
-=======
-
->>>>>>> master
 {% endblock %}
