--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -8,26 +8,23 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>actions</th>
+                <th>Id Movie</th>
+                <th>Nom</th>
+                <th>Quantity</th>
             </tr>
         </thead>
         <tbody>
-        {% for panier in paniers %}
-            <tr>
-                <td>{{ panier.id }}</td>
-                <td>
-                    <a href="{{ path('panier_show', {'id': panier.id}) }}">show</a>
-                    <a href="{{ path('panier_edit', {'id': panier.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="2">no records found</td>
-            </tr>
-        {% endfor %}
+            {% for key, value in panier_items %}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ value["title"] }}</td>
+                    <td>{{ value["quantity"] }}</td>
+                </tr>    
+            {% else %}
+                <tr>
+                    <td colspan="2">no records found</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('panier_new') }}">Create new</a>
 {% endblock %}
