--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -3,14 +3,13 @@
 {% block title %}Movie{% endblock %}
 
 {% block body %}
+    <div class="md-5">
+        <button type="button" onclick="location.href='{{ path('movie_index') }}'" class="btn btn-primary btn-lg" style="color:#3B4CCA;" >Retour au Catalogue</button>
+    </div>
     <h1>Movie</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Movieid</th>
-                <td>{{ movie.movieid }}</td>
-            </tr>
             <tr>
                 <th>Title</th>
                 <td>{{ movie.title }}</td>
@@ -27,9 +26,16 @@
                 <th>Ranking</th>
                 <td>{{ movie.rotten_tomatoes }}</td>
             </tr>
+            <tr>
+                <th>Ranking</th>
+                <td>{{ movie.duration }}</td>
+            </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('movie_index') }}">back to list</a>
+    
+    <div class="md-5">
+        <button type="button" onclick="location.href='{{ path('ajout_panier', {'movieid' : movie.movieid})}}'" class="btn btn-primary btn-lg" style="color:#3B4CCA;" >Ajouter au Panier</button>
+    </div>
 
 {% endblock %}
