--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
                                     <a class="nav-link" href="{{ path('movie_index') }}">Catalogue</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path('afficher_panier') }}">Panier</a>
+                                    <a class="nav-link" href="{{ path('panier_index') }}">Panier</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
