--- a/templates/movie/search.html.twig
+++ b/templates/movie/search.html.twig
@@ -7,5 +7,7 @@
 
     {{ include('movie/_form.html.twig') }}
 
-    <a href="{{ path('movie_index') }}">back to list</a>
+    <div class="md-5">
+        <button type="button" onclick="location.href='{{ path('movie_index') }}'" class="btn btn-primary btn-lg" style="color:#3B4CCA;" >Retour au Catalogue</button>
+    </div>
 {% endblock %}
