--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -8,9 +8,9 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id Movie</th>
+                <th>Id</th>
                 <th>Nom</th>
-                <th>Quantity</th>
+                <th>Quantité</th>
             </tr>
         </thead>
         <tbody>
@@ -35,7 +35,7 @@
                 </tr>    
             {% else %}
                 <tr>
-                    <td colspan="2">no records found</td>
+                    <td colspan="2">Panier est vide ou a expiré</td>
                 </tr>
             {% endfor %}
         </tbody>
