--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                                     <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path('user_new') }}">S'enregistrer</a>
+                                    <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
                                 </li>
 
                             {% elseif app.user %}
