--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,4 +1,10 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Register{% endblock %}
+
+{% block body %}
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button type="submit" class="btn">Save</button>
 {{ form_end(form) }}
+{% endblock %}
