--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,9 @@
                                     <a class="nav-link" href="{{ path('panier_index') }}">Panier</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('commande_index') }}">Commandes</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                                 </li>
 
